--- a/src/Components/Input.css
+++ b/src/Components/Input.css
@@ -90,7 +90,10 @@ select {
     }
     
     .container>.row>.col:first-child input {
-        font-size: 1.5rem;
+        font-size: 2.5rem;
+    }
+    .container>.row>.col:first-child input+p{
+        font-size: 2.5rem!important;
     }
     
     label>h1 {
@@ -102,11 +105,20 @@ select {
         font-size: 1.5rem;
         
     }
-    
+   
     input:read-only {
         font-size: 1.5rem;
 
     }
+}
+
+@media (max-width:768px) {
+    .container>.row>.col:first-child input {
+        font-size: 1.7rem;
+    }
+    .container>.row>.col:first-child input+p{
+        font-size: 1.7rem!important;
+    }    
 }
 
 @media(max-width:585px) {
@@ -122,20 +134,26 @@ select {
     }
     
     .container>.row>.col:first-child input {
-        font-size: 1.8rem;
-        margin:0 0 0 0!important;
-        width: 100%;
+        font-size: 2.5rem;
+        margin: 4.8rem 0  0 3rem!important;
+        width: 40%;
+        height: 2rem!important;
+        padding: 0!important;
+    }
+
+    .container>.row>.col:first-child input+p{
+        font-size: 2.5rem!important;
     }
     
     label>h1 {
         font-size: 2rem;
-        margin: 1rem 0;
+        margin: 2rem 0 2rem 0;
         
     }
     
     select {
+        margin: 2rem 0 2rem 0;
         font-size: 1.8rem;
-        margin: 1rem 0;
     }
     
     input:read-only {
@@ -145,3 +163,49 @@ select {
 
     }
 }
+
+
+@media(max-width:394px) {
+    
+    .container {
+        padding: 3rem 0 0 0;
+    }
+    .container>.row {
+        display: block;
+    }
+    .container>.row div{
+        width: 90%;
+    }
+    
+    .container>.row>.col:first-child input {
+        font-size: 1.8rem;
+        margin: 1rem 0  0 3rem!important;
+        width: 40%;
+        height: 2.5rem!important;
+        padding: 0!important;
+    }
+
+    .container>.row>.col:first-child input+p{
+        font-size: 1.8rem!important;
+        margin: 1rem 0!important;
+    }
+    
+    label>h1 {
+        font-size: 1.5rem;
+        margin: 2rem 0 2rem 0;
+        
+    }
+    
+    select {
+        margin: 2rem 0 2rem 0;
+        font-size: 1.5rem;
+    }
+    
+    input:read-only {
+        margin: 1rem 0 0 0!important;
+        width: 100%;
+        font-size: 1.6rem;
+
+    }
+}
+
