--- a/src/Components/Input.css
+++ b/src/Components/Input.css
@@ -1,211 +1,177 @@
-body{
-    /* margin: 0; */
-    /* padding: 0; */
-    /* box-sizing: border-box; */
-    overflow: hidden;
+body {
+  /* margin: 0; */
+  /* padding: 0; */
+  /* box-sizing: border-box; */
+  overflow: hidden;
 }
 .container {
-    padding: 15rem 0;
+  padding: 15rem 0;
 }
 
-.container>.row {
-    display: flex;
-    border-radius: 20px !important;
-    padding: 7rem 0;
-    background: rgba(222, 184, 135, 0.73);
-    box-shadow: inset 0px 0px 10px burlywood;
+.container > .row {
+  display: flex;
+  border-radius: 20px !important;
+  padding: 7rem 0;
+  background: rgba(222, 184, 135, 0.73);
+  box-shadow: inset 0px 0px 10px burlywood;
 }
 
-.container>.row>.col:first-child input {
-    margin: 4rem 0 1rem 0;
-    background: transparent !important;
-    /* border: none !important; */
-    border: none!important;
-    border-bottom: solid 1px white!important;
-    outline: none !important;
-    font-size: 3rem;
-    border-radius: 7px;
-    font-family: 'Barriecito', cursive;
-    width:70%;
+.container > .row > .col:first-child input {
+  margin: 4rem 0 1rem 0;
+  background: transparent !important;
+  /* border: none !important; */
+  border: none !important;
+  border-bottom: solid 1px white !important;
+  outline: none !important;
+  font-size: 3rem;
+  border-radius: 7px;
+  font-family: "Barriecito", cursive;
+  width: 70%;
 }
-.container>.row>.col:first-child input+p{
-    font-size: 3rem!important;
-    margin-top: 4rem;
-    width:30%;
-    font-family: 'Barriecito', cursive;
-
+.container > .row > .col:first-child input + p {
+  font-size: 3rem !important;
+  margin-top: 4rem;
+  width: 30%;
+  font-family: "Barriecito", cursive;
 }
 
 input:read-only {
-    background: transparent !important;
-    border: none;
-    outline: none !important;
-    font-size: 3rem;
-    margin: 4rem 0 1rem 0;
-    font-family: 'Barriecito', cursive;
+  background: transparent !important;
+  border: none;
+  outline: none !important;
+  font-size: 3rem;
+  margin: 4rem 0 1rem 0;
+  font-family: "Barriecito", cursive;
 }
 
-label>h1 {
-    font-family: 'Barriecito', cursive;
-    font-size: 3rem;
-    text-align: left;
+label > h1 {
+  font-family: "Barriecito", cursive;
+  font-size: 3rem;
+  text-align: left;
 }
 
 select {
-    font-family: 'Barriecito', cursive;
-    font-size: 3rem;
-    border: none;
-    outline: none;
-    border-radius: 5px;
-    background: none;
+  font-family: "Barriecito", cursive;
+  font-size: 3rem;
+  border: none;
+  outline: none;
+  border-radius: 5px;
+  background: none;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 /* media queries  */
 
+@media (max-width: 992px) {
+  .container {
+    padding: 10rem 0;
+  }
 
+  .container > .row > .col:first-child input {
+    font-size: 2.5rem;
+  }
+  .container > .row > .col:first-child input + p {
+    font-size: 2.5rem !important;
+  }
 
+  label > h1 {
+    font-size: 2rem;
+  }
 
+  select {
+    font-size: 1.5rem;
+  }
 
-
-
-
-
-@media(max-width:992px) {
-    
-    .container {
-        padding: 10rem 0;
-    }
-    
-    .container>.row>.col:first-child input {
-        font-size: 2.5rem;
-    }
-    .container>.row>.col:first-child input+p{
-        font-size: 2.5rem!important;
-    }
-    
-    label>h1 {
-        font-size: 2rem;
-
-    }
-    
-    select {
-        font-size: 1.5rem;
-        
-    }
-   
-    input:read-only {
-        font-size: 1.5rem;
-
-    }
+  input:read-only {
+    font-size: 1.5rem;
+  }
 }
 
-@media (max-width:768px) {
-    .container>.row>.col:first-child input {
-        font-size: 1.7rem;
-    }
-    .container>.row>.col:first-child input+p{
-        font-size: 1.7rem!important;
-    }    
+@media (max-width: 768px) {
+  .container > .row > .col:first-child input {
+    font-size: 1.7rem;
+  }
+  .container > .row > .col:first-child input + p {
+    font-size: 1.7rem !important;
+  }
 }
 
-@media(max-width:585px) {
-    
-    .container {
-        padding: 6rem 0 0 0;
-    }
-    .container>.row {
-        display: block;
-    }
-    .container>.row div{
-        width: 90%;
-    }
-    
-    .container>.row>.col:first-child input {
-        font-size: 2.5rem;
-        margin: 4.8rem 0  0 3rem!important;
-        width: 40%;
-        height: 2rem!important;
-        padding: 0!important;
-    }
+@media (max-width: 585px) {
+  .container {
+    padding: 6rem 0 0 0;
+  }
+  .container > .row {
+    display: block;
+  }
+  .container > .row div {
+    width: 90%;
+  }
 
-    .container>.row>.col:first-child input+p{
-        font-size: 2.5rem!important;
-    }
-    
-    label>h1 {
-        font-size: 2rem;
-        margin: 2rem 0 2rem 0;
-        
-    }
-    
-    select {
-        margin: 2rem 0 2rem 0;
-        font-size: 1.8rem;
-    }
-    
-    input:read-only {
-        margin: 1rem 0 0 0!important;
-        width: 100%;
-        font-size: 1.8rem;
+  .container > .row > .col:first-child input {
+    font-size: 2.5rem;
+    margin: 4.8rem 0 0 3rem !important;
+    width: 40%;
+    height: 2rem !important;
+    padding: 0 !important;
+  }
 
-    }
+  .container > .row > .col:first-child input + p {
+    font-size: 2.5rem !important;
+  }
+
+  label > h1 {
+    font-size: 2rem;
+    margin: 2rem 0 2rem 0;
+  }
+
+  select {
+    margin: 2rem 0 2rem 0;
+    font-size: 1.8rem;
+  }
+
+  input:read-only {
+    margin: 1rem 0 0 0 !important;
+    width: 100%;
+    font-size: 1.8rem;
+  }
 }
 
+@media (max-width: 394px) {
+  .container {
+    padding: 3rem 0 0 0;
+  }
+  .container > .row {
+    display: block;
+  }
+  .container > .row div {
+    width: 90%;
+  }
 
-@media(max-width:394px) {
-    
-    .container {
-        padding: 3rem 0 0 0;
-    }
-    .container>.row {
-        display: block;
-    }
-    .container>.row div{
-        width: 90%;
-    }
-    
-    .container>.row>.col:first-child input {
-        font-size: 1.8rem;
-        margin: 1rem 0  0 3rem!important;
-        width: 40%;
-        height: 2.5rem!important;
-        padding: 0!important;
-    }
+  .container > .row > .col:first-child input {
+    font-size: 1.8rem;
+    margin: 1rem 0 0 3rem !important;
+    width: 40%;
+    height: 2.5rem !important;
+    padding: 0 !important;
+  }
 
-    .container>.row>.col:first-child input+p{
-        font-size: 1.8rem!important;
-        margin: 1rem 0!important;
-    }
-    
-    label>h1 {
-        font-size: 1.5rem;
-        margin: 2rem 0 2rem 0;
-        
-    }
-    
-    select {
-        margin: 2rem 0 2rem 0;
-        font-size: 1.5rem;
-    }
-    
-    input:read-only {
-        margin: 1rem 0 0 0!important;
-        width: 100%;
-        font-size: 1.6rem;
+  .container > .row > .col:first-child input + p {
+    font-size: 1.8rem !important;
+    margin: 1rem 0 !important;
+  }
 
-    }
+  label > h1 {
+    font-size: 1.5rem;
+    margin: 2rem 0 2rem 0;
+  }
+
+  select {
+    margin: 2rem 0 2rem 0;
+    font-size: 1.5rem;
+  }
+
+  input:read-only {
+    margin: 1rem 0 0 0 !important;
+    width: 100%;
+    font-size: 1.6rem;
+  }
 }
-
